ref #91: Fix align with breadcrumb.

--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -588,7 +588,7 @@ $border-radius: 6px;
   a {
     outline: none;
     display: block;
-    text-indent: 20px;
+    text-indent: 0;
     float: left;
     font-size: 13px;
     line-height: 45px;
